--- a/examples/Benchmark/Benchmark_4dx_10.yaml
+++ b/examples/Benchmark/Benchmark_4dx_10.yaml
@@ -54,9 +54,10 @@ PeriLab:
         Type: Rectangular_Plane
   Outputs:
     Output1:
-      Number of Output Steps: 100
+      Number of Output Steps: 2
       Output Filename: Benchmark
       Output File Type: Exodus
+      Flush File: false
       Output Variables:
         Damage: true
         Displacements: true
@@ -65,9 +66,10 @@ PeriLab:
         External_Forces: True
         External_Displacements: True
     Output2:
-      Number of Output Steps: 100
+      Number of Output Steps: 2
       Output Filename: Benchmark
       Output File Type: CSV
+      Flush File: false
       Output Variables:
         External_Forces: True
         External_Displacements: True
