--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
 
 before_script:
   # workaround for https://github.com/JuliaDocs/Documenter.jl/issues/686
-  - apt-get -qq update; apt-get -y install git jq bc
+  - apt-get -qq update; apt-get -y install git jq bc build-essential
   - julia --project=@. -e "import Pkg; Pkg.build()"
 
 test:
