--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,9 @@ test:
       - src/**/*
       - test/**/*
   script:
-    - julia --project=@. -e 'import Pkg; Pkg.add("PackageCompiler"); using PackageCompiler; create_app(".", "PeriLab_Image", executables=["main" => "main"], incremental=true)'
-    - julia --project=@. -e "import Pkg; Pkg.test(; coverage = true)"
+    - julia --project=@. -e 'import Pkg; Pkg.add("PackageCompiler");
+      using PackageCompiler; create_app(".", "build", executables=["main" => "PeriLab", "get_examples" => "get_examples"], incremental=true);
+      Pkg.test(; coverage = true)'
     # - julia --project=test/coverage -e 'import Pkg; Pkg.instantiate()'
     # - julia --project=test/coverage test/coverage/coverage-summary.jl
 
@@ -34,6 +35,7 @@ test:
   artifacts:
     paths:
       - test
+      - build
 
 deploy:
   stage: deploy
