added juliahub application main

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
 
 before_script:
   # workaround for https://github.com/JuliaDocs/Documenter.jl/issues/686
-  - apt-get -qq update; apt-get -y install git jq bc build-essential
+  - apt-get -qq update; apt-get -y install git jq bc
   - julia --project=@. -e "import Pkg; Pkg.build()"
 
 test:
@@ -49,6 +49,7 @@ release:
   only:
     - tags
   script:
+    - apt-get -y install build-essential
     - julia --project=@. -e 'import Pkg; Pkg.add("PackageCompiler");
       using PackageCompiler;
       create_app(".", "build", executables=["main" => "PeriLab", "get_examples" => "get_examples"], incremental=true)'
