--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Christian Willberg <christian.willberg@dlr.de>", "Jan-Timo Hesse <ja
 version = "1.0.1"
 
 [deps]
+AngleBetweenVectors = "ec570357-d46e-52ed-9726-18773498274d"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -23,9 +24,9 @@ TensorOperations = "6aa20fa7-93e2-5fca-9bc0-fbd0db3c71a2"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
-julia = "1"
 ArgParse = "1.1.4"
 CSV = "0.10.11"
 DataFrames = "1.6.1"
@@ -41,6 +42,8 @@ Tensors = "1.16.1"
 TestSetExtensions = "2.0.0"
 TimerOutputs = "0.5.23"
 YAML = "0.4.9"
+ZipFile = "0.10.1"
+julia = "1"
 
 [extras]
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
