--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,11 @@ authors = ["Christian Willberg <christian.willberg@dlr.de>", "Jan-Timo Hesse <ja
 version = "1.0.1"
 
 [deps]
-AngleBetweenVectors = "ec570357-d46e-52ed-9726-18773498274d"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
@@ -31,6 +31,7 @@ ArgParse = "1.1.4"
 CSV = "0.10.11"
 DataFrames = "1.6.1"
 Exodus = "0.11.0"
+Interpolations = "0.15.0"
 JSON3 = "1.13.2"
 LoggingExtras = "1.0.3"
 MPI = "0.20.19"
