--- a/examples/Compact_Tension/CompactTension.yaml
+++ b/examples/Compact_Tension/CompactTension.yaml
@@ -85,16 +85,23 @@ PeriLab:
       Damage:
         Critical Value: 5.578800557880057
         Damage Model: Critical Energy
+        Anisotropic Damage:
+          Critical Value 0: 5.0
+          Critical Value 90: 2.5
   Outputs:
     Output1:
       Number of Output Steps: 100
       Output File Type: Exodus
       Output Filename: CompactTension_Output1
       Output Variables:
-        Damage: true
+        Orientations: True
+        Damage: True
+        Angles: True
         Displacements: true
         Forces: true
         Number of Neighbors: true
+        Strain: True
+        Cauchy Stress: True
     Output2:
       Output File Type: Exodus
       Output Filename: CompactTension_Output2
@@ -108,7 +115,7 @@ PeriLab:
     Initial Time: 0.0
     Material Models: true
     Damage Models: true
-    Maximum Damage: 0.3
+    # Maximum Damage: 0.3
     Verbose: false
     Verlet:
       Numerical Damping: 5.0e-06
