--- a/examples/Small/Input.yaml
+++ b/examples/Small/Input.yaml
@@ -21,6 +21,9 @@ PeriLab:
       Damage:
         Critical Value: 10.1
         Damage Model: Critical Energy
+        Anisotropic Damage:
+          Critical Value 0: 10.1
+          Critical Value 90: 10.1
   Blocks:
     block_1:
       Block Names: "block_1"
@@ -64,7 +67,7 @@ PeriLab:
     Damage Models: True
     Verbose: False
     Initial Time: 0.0
-    Final Time: 0.00001
+    Final Time: 1.2e-6
     Stop after damage initiation: False
     End step after damage: 3
     Verlet:
@@ -86,3 +89,6 @@ PeriLab:
         Volume: True
         Number of Neighbors: True
         Strain: True
+        Orientations: True
+        Damage: True
+        Angles: True
