new mass matrix calculation

--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TensorOperations = "6aa20fa7-93e2-5fca-9bc0-fbd0db3c71a2"
 Tensorial = "98f94333-fa9f-48a9-ad80-1c66397b2b38"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
