--- a/test/fullscale_tests/test_thermal_flow/thermal_flow.yaml
+++ b/test/fullscale_tests/test_thermal_flow/thermal_flow.yaml
@@ -21,9 +21,9 @@ PeriLab:
       Thermal test:
         Thermal Model: "Thermal Flow"
         Type: "Bond based"
-        Heat expansion: 0.22
+        Thermal Expansion Coefficient: 0.22
         Specific Heat Capacity: 1
-        Lambda: 2000.0
+        Heat Transfer Coefficient: 2000.0
   Blocks:
     block_1:
       Block Names: "block_1"
