--- a/examples/Additive/Zugstab.yaml
+++ b/examples/Additive/Zugstab.yaml
@@ -14,32 +14,30 @@ PeriLab:
       PLA:
         Material Model: PD Solid Elastic
         Zero Energy Control: Global
-        Young's Modulus: 3.45e+9
+        Young's Modulus: 3450
         Poisson's Ratio: 3.4e-01
-
-        Thermal Conductivity Print Bed: 1.2
-        Print Bed Temperature: 60.0
-        Volume Limit: 0.68
     Additive Models:
       Additive:
         Additive Model: Simple
         Print Temperature: 200
     Thermal Models:
       Thermal:
-        Thermal Model: Thermal Expansion + Thermal Flow + Heat Transfer
-        Thermal Expansion Coefficient: 7.0e-5
-        Type: Bond based
-        Heat Transfer Coefficient: 15.0
+        Thermal Model: Heat Transfer + Thermal Flow + Thermal Expansion
+        Heat Transfer Coefficient: 15.0e-3
         Environmental Temperature: 30
+        Type: Bond based
         Thermal Conductivity: 0.12
+        Thermal Conductivity Print Bed: 1.2
+        Print Bed Temperature: 60.0
+        Thermal Expansion Coefficient: 7.0e-5
   Blocks:
     block_1:
       Material Model: PLA
       Additive Model: Additive
       Thermal Model: Thermal
       Horizon: 2.0
-      Density: 1.24e+3
-      Specific Heat Capacity: 1800.0
+      Density: 1240.e-12
+      Specific Heat Capacity: 1800.0e+6
   Boundary Conditions:
     BC_1:
       Type: Displacements
@@ -62,7 +60,8 @@ PeriLab:
     Thermal Models: True
     Verbose: False
     Initial Time: 0.0
-    Final Time: 500
+    Final Time: 2700
+    # Final Time: 500
     Verlet:
       Fixed dt: 1.0
       Safety Factor: 1.0
@@ -71,7 +70,7 @@ PeriLab:
     Output1:
       Output File Type: Exodus
       Output Filename: Zugstab_Output1
-      Output Frequency: 1
+      Output Frequency: 5
       Output Variables:
         Displacements: true
         Forces: true
@@ -80,3 +79,4 @@ PeriLab:
         Temperature: True
         Heat Flow: True
         Active: True
+        Specific Volume: True
