--- a/test/fullscale_tests/test_thermal_flow/thermal_flow.yaml
+++ b/test/fullscale_tests/test_thermal_flow/thermal_flow.yaml
@@ -22,7 +22,7 @@ PeriLab:
         Thermal Model: "Thermal Flow"
         Type: "Bond based"
         Thermal Expansion Coefficient: 0.22
-        Heat Transfer Coefficient: 2000.0
+        Thermal Conductivity: 2000.0
   Blocks:
     block_1:
       Block Names: "block_1"
