--- a/test/fullscale_tests/test_FEM/FEM_p1_3d.yaml
+++ b/test/fullscale_tests/test_FEM/FEM_p1_3d.yaml
@@ -4,43 +4,54 @@
 
 PeriLab:
   Discretization:
-    Type: "Text File"
-    Input Mesh File: "test_mesh_3d.txt"
+    Node Sets:
+      Node Set 1: 1 2 3 4 5 6 7 8 9 10 11 12
+    Input Mesh File: "test_mesh_p1_3d.txt"
+    Input External Topology:
+        File: "test_topo_p1_3d.txt"
+        Add Neighbor Search: false
+  FEM:
+    Element Type: "Lagrange"
+    Degree: 1
+    Material Model: "Mat_1"
   Physics:
-    Additive Models:
-      Test:
-        Additive Model: "Simple"
-        Print Temperature: 100
+    Material Models: 
+        Mat_1: 
+            Material Model: "Correspondence Elastic"
+            Symmetry: "isotropic plane strain"
+            Bulk Modulus: 2.5e+3
+            Shear Modulus: 1.15e3
   Blocks:
     block_1:
       Block Names: "block_1"
-      Additive Model: "Test"
+      Material Model: "Mat_1"
       Density: 2000
-      Horizon: 2.1005
-      Specific Heat Capacity: 1e6
-    block_2:
-      Block Names: "block_2"
-      Additive Model: "Test"
-      Density: 2000
-      Horizon: 2.1005
-      Specific Heat Capacity: 1e6
+      Horizon: 1.1005
+  Boundary Conditions: 
+        BC_1: 
+            Type: "Displacements"
+            Node Set: "Node Set 1"
+            Coordinate: "x"
+            Value: "0.1*x"
+        BC_2: 
+            Type: "Displacements"
+            Node Set: "Node Set 1"
+            Coordinate: "y"
+            Value: "0.0"
   Solver:
-    Additive Models: True
-    Material Models: False
-    Thermal Models: False
     Verbose: False
     Initial Time: 0.0
     Final Time: 0.8
     Verlet:
       Safety Factor: 1.00
       Numerical Damping: 0e-0
-      Fixed dt: 0.045
+      Fixed dt: 0.4
   Outputs:
     Output1:
-      Output Filename: "additive_3d"
+      Output Filename: "FEM_p1_3d"
       Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
-        Temperature: True
-        Heat Flow: True
-        Active: True
+        Cauchy Stress: True
+        Displacements: True
+        
