--- a/test/fullscale_tests/test_FEM/FEM_p2_3d.yaml
+++ b/test/fullscale_tests/test_FEM/FEM_p2_3d.yaml
@@ -5,14 +5,14 @@
 PeriLab:
   Discretization:
     Node Sets:
-      Node Set 1: 1 2 3 4 5 6 7 8 9 10 11 12
-    Input Mesh File: "test_mesh_p1_3d.txt"
+      Node Set 1: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
+    Input Mesh File: "test_mesh_p2_3d.txt"
     Input External Topology:
-        File: "test_topo_p1_3d.txt"
+        File: "test_topo_p2_3d.txt"
         Add Neighbor Search: false
   FEM:
     Element Type: "Lagrange"
-    Degree: 1
+    Degree: 2
     Material Model: "Mat_1"
   Physics:
     Material Models: 
@@ -53,7 +53,7 @@ PeriLab:
       Fixed dt: 0.4
   Outputs:
     Output1:
-      Output Filename: "FEM_p1_3d"
+      Output Filename: "FEM_p2_3d"
       Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
