added mesh type

--- a/test/fullscale_tests/test_FEM/FEM_p2_3d.yaml
+++ b/test/fullscale_tests/test_FEM/FEM_p2_3d.yaml
@@ -7,9 +7,11 @@ PeriLab:
     Node Sets:
       Node Set 1: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
     Input Mesh File: "test_mesh_p2_3d.txt"
+    Type: "Text File"
     Input External Topology:
         File: "test_topo_p2_3d.txt"
         Add Neighbor Search: false
+        Type: "Text File"
   FEM:
     Element Type: "Lagrange"
     Degree: 2
