--- a/test/fullscale_tests/test_FEM/FEM_p2_1_1_3d.yaml
+++ b/test/fullscale_tests/test_FEM/FEM_p2_1_1_3d.yaml
@@ -7,8 +7,10 @@ PeriLab:
     Node Sets:
       Node Set 1: 1 2 3 4 5 6 7 8 9 10 11 12
     Input Mesh File: "test_mesh_p1_3d.txt"
+    Type: "Text File"
     Input External Topology:
         File: "test_topo_p2_1_1_3d.txt"
+        Type: "Text File"
         Add Neighbor Search: false
   FEM:
     Element Type: "Lagrange"
