--- a/test/fullscale_tests/test_FEM/FEM_p2_2d.yaml
+++ b/test/fullscale_tests/test_FEM/FEM_p2_2d.yaml
@@ -7,9 +7,11 @@ PeriLab:
     Node Sets:
       Node Set 1: 1 2 3 4 5 6 7 8 9
     Input Mesh File: "test_mesh_p2_2d.txt"
+    Type: "Text File"
     Input External Topology:
         File: "test_topo_p2_2d.txt"
         Add Neighbor Search: false
+        Type: "Text File"
   FEM:
     Element Type: "Lagrange"
     Degree: 2
