--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.1.0"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
