--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,6 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
-JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
@@ -31,18 +30,30 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 
 [compat]
+AbaqusReader="0.2.5"
+Aqua = "0.8"
 ArgParse = "1.1.4"
 CSV = "0.10.11"
 DataFrames = "1.6.1"
+Dierckx = "0.5"
 Exodus = "0.11.0"
+FastGaussQuadrature = "1.0"
 JSON3 = "1.13.2"
+LinearAlgebra = "1.10.0"
+Logging = "1.3.0"
 LoggingExtras = "1.0.3"
 MPI = "0.20.19"
 NearestNeighbors = "0.4.13"
+Pkg = "1.5.0"
+Printf = "1.10.0"
 ProgressBars = "1.5.1"
+Random = "1.6.0"
+Reexport = "1.2.2"
 Rotations = "1.6.1"
+Statistics =  "1.8.0"
 TensorOperations = "4.0.7"
 Tensors = "1.16.1"
+Test = "1.8.0"
 TestSetExtensions = "2.0.0"
 TimerOutputs = "0.5.23"
 YAML = "0.4.9"
@@ -50,10 +61,12 @@ ZipArchives = "1.1.1"
 julia = "1"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [targets]
-test = ["Logging", "MPI", "Test", "TestSetExtensions"]
+test = ["Aqua", "JSON3", "Logging", "MPI", "Test", "TestSetExtensions"]
