--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PeriLab"
 uuid = "2ecefcea-59f0-46dd-9cfd-1d2b8cc5f112"
 authors = ["Christian Willberg <christian.willberg@dlr.de>", "Jan-Timo Hesse <jan-timo.hesse@dlr.de>"]
-version = "1.0.4"
+version = "1.0.5"
 
 [deps]
 AbaqusReader = "bc6b9049-e460-56d6-94b4-a597b2c0390d"
@@ -11,6 +11,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
+LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
@@ -30,7 +31,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 
 [compat]
-AbaqusReader="0.2.5"
+AbaqusReader = "0.2.5"
 Aqua = "0.8"
 ArgParse = "1.1.4"
 CSV = "0.10.11"
@@ -50,7 +51,7 @@ ProgressBars = "1.5.1"
 Random = "1.6.0"
 Reexport = "1.2.2"
 Rotations = "1.6.1"
-Statistics =  "1.8.0"
+Statistics = "1.8.0"
 TensorOperations = "4.0.7"
 Tensors = "1.16.1"
 Test = "1.8.0"
