--- a/test/fullscale_tests/test_dogbone/dogbone.yaml
+++ b/test/fullscale_tests/test_dogbone/dogbone.yaml
@@ -23,7 +23,7 @@ PeriLab:
         Symmetry: "isotropic plane stress"
         Young's Modulus: 7.0e+5
         Poisson's Ratio: 0.33
-        Zero Energy Mode Control: "Global"
+        Zero Energy Control: "Global"
     Damage Models:
       Damage:
         Critical Value: 10.1
