fixed aqua warning

--- a/Project.toml
+++ b/Project.toml
@@ -39,6 +39,7 @@ DataFrames = "1.6.1"
 Dierckx = "0.5"
 Exodus = "0.11.0"
 FastGaussQuadrature = "1.0"
+LibGit2 = "1.4.0"
 JSON3 = "1.13.2"
 LinearAlgebra = "1.10.0"
 Logging = "1.3.0"
